@@ -22,6 +22,7 @@ NEW FEATURES
     - get_cpu_percent()
     - get_num_threads()
  * Issue 300: examples/pmap.py script.
+ * Issue 301: process_iter() now yields processes sorted by their PIDs.
 
 BUGFIXES
 
